# nanatau

./: .gitignore  .mcp.json  .secretlintignore  AGENTS.md  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/: settings.json
.claude/skills/character-sheet/: SHEET_TEMPLATES.md  SKILL.md
.claude/skills/character-sheet/scripts/: generate_character_sheet.py
.claude/skills/motion-pngtuber-nanatau/: README.md  SKILL.md
.claude/skills/motion-pngtuber-nanatau/scripts/: export_browser_bundle.py  extract_mouth.py  find_loop_candidates.py  promote_assets.py  verify_server.py
.claude/skills/nanatau/: PNGTUBER.md  PROMPTS.md  SKILL.md  STYLE_GUIDE.md
.claude/skills/nanatau-blog-writer/: SKILL.md
.claude/skills/nanatau-blog-writer/assets/: lume-template.md
.claude/skills/nanatau-blog-writer/references/: article-structure.md  writing-style.md
.claude/skills/nanatau/scripts/: finalize_pngtuber_assets.py  generate_image.py  remove_bg_batch.py  split_pngtuber_grid.py
.claude/skills/verify/: SKILL.md
.github/workflows/: check-feeds.yml  deploy.yml
blog/: .gitignore  404.md  AGENTS.md  CLAUDE.md  _config.ts  _data.yml  archive.page.js  archive_result.page.js  deno.json  external_feeds.ts  index.page.js  index.vto  og_image.ts  privacy-policy.md  styles_out.css
blog/_includes/layouts/: base.vto
blog/_includes/templates/: post-details.vto  post-list.vto
blog/design/: pencil-new.pen
blog/posts/: crof-ai-opencode-glm51-cheap.md  hello-lume.md  nanatau-style.md  nyosegawa-style-test.md
blog/scripts/: check-feeds.ts
(+5 files in other folders)
