[project]
name = "nanatau-motionpngtuber-tools"
version = "0.1.0"
description = "MotionPNGTuber toolchain for the nanatau repository"
readme = ".claude/skills/motion-pngtuber-nanatau/README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scipy>=1.10.0",
    "tqdm>=4.66.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "openmim>=0.3.9",
    "mmdet==2.28.0",
    "mmpose==0.29.0",
    "anime-face-detector==0.0.9",
]

[tool.uv]
override-dependencies = [
    "opencv-python-headless>=4.5.4.58 ; sys_platform == 'never'",
]
